# Lote-stm32

./: .clangd  .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt
firmware/drivers/stm32g4xx_hal_driver/inc/: stm32g4xx_hal_def.h
firmware/inc/: app_types.h  data_processor.h  dma.h  dwt.h  image.h  main.h  stack_monitor.h  stm32g4xx_hal_conf.h  usbd_cdc_if.h
firmware/ld/: linker.ld  linker_stm32g431xx.ld
firmware/src/: data_processor.cpp  dma.c  dwt.c  gpio.c  main.c  main.cpp  stack_monitor.c  syscall.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
firmware/startup/: startup_stm32g431xx.s
tools/: flash.sh  run_hil.py
